# game

./: CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h
web/: past_html_css_js_in_hear.txt
